--- a/_layouts/package_search.html
+++ b/_layouts/package_search.html
@@ -15,7 +15,7 @@ layout: default
         <div class="input-group">
           <input id="search-query" autocomplete="off" type="text" class="form-control" name="q" placeholder="Search ROS packages">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+            <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search" title="Find in rosindex"></span></button>
           </span>
         </div>
       </form>
@@ -48,9 +48,9 @@ layout: default
   <table class="table table-condensed table-striped table-hover">
     <thead>
       <tr>
-        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-flash"></span></th>
-        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-file"></span></th>
-        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-time"></span></th>
+        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-flash" title="Release status"></span></th>
+        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-file" title="README status"></span></th>
+        <th class="col-xs-1" style="text-align: center;"><span class="glyphicon glyphicon-time" title="Last commit date"></span></th>
         <th class="col-xs-1">Distro</th>
         <th class="col-xs-2">Name</th>
         <th class="col-xs-4">Repo</th>
