--- a/_includes/instance_switch.html
+++ b/_includes/instance_switch.html
@@ -10,7 +10,7 @@
         <div class="btn-group" style="width: 90%" role="group">
           <div class="dropdown">
             <!-- TODO: add disabled when only 1 version is known? -->
-            <button class="btn btn-xs btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+            <button class="btn btn-xs btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" title="Select Instance">
               <span class="pull-left" style="width: 100%; text-align: left">
                 <span class="pull-right"><span class="caret"></span></span> 
               <span class="glyphicon glyphicon-{% if page.default_instance_id == instance.id %}star{% else %}none{% endif %}"></span>
